src/test/compile-fail/attr-dangling-in-mod.rs
// xfail-stage0
// error-pattern:expected item

fn main() {
}

#[foo = "bar"]
